// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages components renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count"
  >
    4
  </div>
</div>
`;

exports[`Messages components renders the UI as expected for 0 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count"
  >
    4
  </div>
</div>
`;

exports[`renders the UI as expected for 0 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;
